@@ -37,7 +37,7 @@ jQuery(document).ready( function() {
         }
 
         //var url = 'http://127.0.0.1:' + client.get('data').port + '/gui/pair';//?iframe=' + encodeURIComponent(window.location.href);
-        var url = 'http://127.0.0.1:' + client.get('data').port + '/gui/pair?iframe=' + 'foobar'; // &style is broken
+        var url = 'http://127.0.0.1:' + client.get('data').port + '/gui/pair?iframe=Control'); // &style is broken
 
         if (config.fake_pairing) {
             url = 'client_html/pairing.html';
